show_detail 자세히보기 enabled - bugs on small texts

--- a/config/static/layout.css
+++ b/config/static/layout.css
@@ -57,3 +57,10 @@
     margin-left: 90%;
     z-index: 30;
 }
+.y250 {
+    height: 250px;
+    overflow-y: hidden;
+}
+.none {
+    display: none;
+}
